--- a/5-model/personal/todo-app-node/views/pages/index.ejs
+++ b/5-model/personal/todo-app-node/views/pages/index.ejs
@@ -6,6 +6,15 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>My to do list</h1>
+        <form action="/" method="post">
+            <input type="text" name="todo" id="todo">
+            <button type="submit">Add Task</button>
+        </form>
+        <ol>
+            <% for( let i = 0; i < lists.length; i++ ) { %>
+            <li><%= lists[i].title %></li>
+            <% } %>
+        </ol>
     </body>
 </html>
